--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,5 +7,11 @@
 </ion-header>
 
 <ion-content padding>
-
+    <div>
+        <button id="notification-button" ion-button clear>
+            <ion-icon name="notifications">
+              <ion-badge id="notifications-badge" color="danger">5</ion-badge>
+            </ion-icon>              
+        </button>
+    </div>
 </ion-content>
